# now-and-here

./: .gitignore  Makefile  README.md  pyproject.toml  tailwind.config.js
now_and_here/: __init__.py  cli.py  console.py  models.py  time.py
now_and_here/cli_app/: app.py  common.py  config.py  label.py  project.py  task.py
now_and_here/config/: __init__.py  app_config.py  default_config.py  get_config.py
now_and_here/datastore/: __init__.py  datastore.py  errors.py  get_store.py
now_and_here/datastore/sqlite_store/: __init__.py  create.py  queries.py  sqlite_store.py  unstructed_sqlite_store.py  unstructured_sqlite_store.py
now_and_here/fastapi_app/: api.py  app.py
now_and_here/fastapi_app/static/css/: main.css  main.css--minify
now_and_here/fastapi_app/templates/: _base.html  functions.html  index.html  main.html  project.html  projects.html  task.html  task_view.html
now_and_here/fastapi_app/ui/: asset-manifest.json  index.html
now_and_here/models/: __init__.py  common.py  label.py  project.py  task.py  user_context.py
now_and_here/models/repeat_interval/: __init__.py  daily_interval.py  monthly_interval.py  parse.py  repeat_interval.py  weekly_interval.py
now_and_here/views/: task_views.py
stubs/: fastembed.pyi  sqlite_vss.pyi
tests/: conftest.py
tests/models/repeat_interval/: test_daily_interval.py  test_monthly_interval.py  test_serialize.py  test_weekly_interval.py
tests/views/: test_task_views.py
tests/workflows/: conftest.py  nhrunner.py  test_add_task.py  test_create_task.py  test_task_due.py  test_task_repeat.py
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  error-page.tsx  main.tsx
ui/src/apiServices/: common.ts  project.ts  task.ts  task.tsx  view.ts
ui/src/components/: view.tsx
ui/src/contexts/: TitleContext.tsx
ui/src/functions/: time.ts
ui/src/lib/: repeat.ts  time.ts  utils.ts
ui/src/routes/: contact.tsx  project.tsx  projects.tsx  root.tsx  taskView.tsx  taskViews.tsx
ui/src/types/: project.ts  repeatInterval.ts  task.ts  view.ts
(+186 files in other folders)
