[tool.poetry]
name = "now_and_here"
version = "0.1.0"
description = "Locally-hosted task management"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.1"
pydantic = "^2.6.3"
dateparser = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
mypy = "^1.8.0"
types-pytz = "^2024.1.0.20240203"
types-dateparser = "^1.1.4.20240106"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nh = "now_and_here.cli:app"