[tool.poetry]
name = "now_and_here"
version = "0.1.0"
description = "Locally-hosted task management"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.1"
pydantic = "^2.6.3"
dateparser = "^1.2.0"
python-dateutil = "^2.9.0.post0"
pytailwindcss = "^0.2.0"
fastapi = {extras = ["all"], version = "^0.110.0"}
jinja2 = "^3.1.3"
tzlocal = "^5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
mypy = "^1.8.0"
types-pytz = "^2024.1.0.20240203"
types-dateparser = "^1.1.4.20240106"
pytest = "^8.1.1"
types-python-dateutil = "^2.8.19.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nh = "now_and_here.cli:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
